--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -18,7 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "removeComments": true,
+    "downlevelIteration": true,
+    "noImplicitAny": true,
+    "experimentalDecorators": true,
+    "strictNullChecks": false,
   },
   "include": [
     "src"
