--- a/my-app/package.json
+++ b/my-app/package.json
@@ -32,7 +32,8 @@
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.ts{,x}",
     "lint": "eslint src/**/*.ts{,x}",
-    "lint:fix": "eslint src/**/*.ts{,x} --fix"
+    "lint:fix": "eslint src/**/*.ts{,x} --fix",
+    "prepare": "cd ../ && husky install ./my-app/.husky"
   },
   "husky": {
     "hooks": {
