--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0"
   },
@@ -50,8 +51,8 @@
   },
   "devDependencies": {
     "@react-mock/localstorage": "^0.1.2",
-    "@testing-library/react": "^12.1.4",
     "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
